# Med_Rag

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: installation.md  methodologie_rag_medical.md  quickstart.md
examples/: basic_usage.py  benchmark_example.py  colab_demo.ipynb  multi_pdf.py
src/medrag/: __init__.py  benchmark.py  chunk.py  client.py  exceptions.py  extract.py  hierarchy.py  index.py  search.py
tests/: test_chunk.py  test_client.py  test_hierarchy.py  test_index.py  test_search.py
